--- a/desafios/desafiocordel/style.css
+++ b/desafios/desafiocordel/style.css
@@ -1,8 +1,54 @@
 @charset "UTF-8";
 
-body {}
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
-h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 10vw;
+body {
+    min-height: 100vh;
+    background-color: white;
+    color: black;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant:small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
+    background-color: black;
+    color: white;
+    padding-top:10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+
+footer { 
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
